--- a/ResumePilot/package.json
+++ b/ResumePilot/package.json
@@ -10,8 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
+    "file-saver": "^2.0.5",
+    "firebase": "^11.8.1",
+    "framer-motion": "^12.15.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.1",
+    "react-to-print": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
